--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "browser-sync start --server --watch --files \"index.html\"\"assets/css/style.css\"",
     "compileScss": "sass --watch assets/scss:assets/css",
-    "server": "npm-run-all --parallel watch compileScss"
+    "page": "npm-run-all --parallel watch compileScss"
   },
   "repository": {
     "type": "git",
