--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.26.3",
+    "concurrently": "^5.3.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.17.3"
   },
@@ -13,7 +14,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "browser-sync start --server --watch --files \"index.html\"\"assets/css/style.css\"",
     "compileScss": "sass --watch assets/scss:assets/css",
-    "page": "npm-run-all --parallel watch compileScss"
+    "page": "npm-run-all --parallel watch compileScss",
+    "start": "concurrently \"npm:watch\" \"npm:compileScss\""
   },
   "repository": {
     "type": "git",
